--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "food-festival",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "",
   "scripts": {
     "webpack": "webpack --watch",
     "build": "webpack",
-    "start:dev": "webpack-dev-server",
+    "start:dev": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/mplumer/food-festival#readme",
   "devDependencies": {
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^7.0.1",
     "webpack": "^5.10.3",
     "webpack-bundle-analyzer": "^4.2.0",
     "webpack-cli": "^4.2.0",
@@ -29,8 +31,8 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
-    "i": "^0.3.6",
-    "image-webpack-loader": "^7.0.1",
+    "webpack-pwa-manifest": "^4.3.0",
+    "sw-precache-webpack-plugin": "^0.11.5",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   }
