--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/mplumer/food-festival#readme",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^7.0.1",
@@ -31,9 +32,9 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
-    "webpack-pwa-manifest": "^4.3.0",
-    "sw-precache-webpack-plugin": "^0.11.5",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "sw-precache-webpack-plugin": "^0.11.5",
+    "webpack-pwa-manifest": "^4.3.0"
   }
 }
